--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "rails-ujs": "^5.2.5",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "resolve-url-loader": "^3.1.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
